fixed marked text on mobile

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -44,13 +44,17 @@ h2.subheading {
 
 /* tablet stylings */
 @media (max-width: 1024px) {
-    
-
-    
+    .subheading {
+        line-height: 1.5;
+    }
 }
 
 /* mobile stylings */
 @media (max-width: 767px) {
+    .subheading {
+        margin-bottom: 2rem !important;
+    }
+
     .home-container .polaroid-image {
         height: 20rem !important;
     }
